# LENIA-3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
build-full/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_1e25c88382.json  lenia_bench  lenia_search  lenia_sweep  lenia_test_persist  lenia_tests  lenia_tests[1]_include.cmake  lenia_tests[1]_tests.cmake  lenia_viz
build-full/Testing/Temporary/: CTestCostData.txt
build-opt/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_1e25c88382.json  lenia_bench  lenia_tests  lenia_tests[1]_include.cmake  lenia_tests[1]_tests.cmake
build-viz/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  lenia_bench  lenia_search  lenia_sweep  lenia_test_persist  lenia_viz
scripts/: analyze_search.py  benchmark.sh  decode_312.cc  generate_figures.py  lenia2d_sequence.py  plot_deep_run.py  plot_multi_runs.py  plot_patterns.gp  plot_performance.gp  plot_soliton_catalog.py  render_isosurface.py  run_simulations.sh  sweep_params.sh
src/: main.cc  main_bench.cc  main_search.cc  main_sweep.cc
src/core/: config.cc  config.h  fft_engine.cc  fft_engine.h  grid.cc  grid.h  growth.cc  growth.h  kernel.cc  kernel.h  lenia.cc  lenia.h
src/io/: benchmark.cc  benchmark.h  csv_exporter.cc  csv_exporter.h  screenshot.cc  screenshot.h
src/search/: metrics_3d.cc  metrics_3d.h
src/viz/: camera_ctrl.cc  camera_ctrl.h  colormap.cc  colormap.h  gui_overlay.cc  gui_overlay.h  marching_cubes.cc  marching_cubes.h  renderer.cc  renderer.h  slice_view.cc  slice_view.h
tests/core/: test_fft.cc  test_grid.cc  test_growth.cc  test_kernel.cc  test_lenia.cc
tests/testdata/: known_patterns.json  orbium_2d.json
